--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_id">371659460056014</string>
     <string name="app_name">Choice4fitness</string>
 
     <string name="nav_item_home">My Profile</string>
@@ -8,6 +9,7 @@
     <string name="nav_item_report">Report</string>
     <string name="nav_item_community">Community</string>
     <string name="nav_item_help">Help</string>
+
 
 
     <!-- navigation drawer item labels  -->
